2009-01-19 Nicolas Roard <nicolas@roard.com>
	Improve syntax highlighting
	* add new 'token' methods in PrettyPrinterWriter
	* add category on LKCompare in PrettyPrinterCategories

2009-01-19 Nicolas Roard <nicolas@roard.com>
	Revert changes from r4269 (LKMessageSend prettyprint method in objc)

2009-01-19 Nicolas Roard <nicolas@roard.com>
	Make CodeMonkey work with the new LK organisation (without SmalltalkKit)
	* wrote a loading function in main.m
	* modified files to remove SmalltalkKit includes
	* remove use of SmalltalkCompiler

2009-01-18 Nicolas Roard <nicolas@roard.com>
 	Refactoring...
	* split the LK* categories with the pretty printer in two smalltalk files
	* some modifications in the pretty printer

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Moves the NSFont -italic category from main.m to PrettyPrint.st

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Moves the LKMessageSend -prettyprintToWriter to PrettyPrint.st

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Implemented a partial syntax highlighting / formatting
	  (based on guenther's PrettyPrint.st code)

2009-01-17 Nicolas Roard <nicolas@roard.com>
	* Refactored the code to use the new visitor code that David committed today.
	  We now use ASTModel (a visitor) to extract the info from the ast
	* Added a ASTTransform class to do a simple AST transformation (will be
	  used for the adding/removing ivars at runtime)

2009-01-16 Nicolas Roard <nicolas@roard.com>
	Fixed a segfault when applying categories on classes never
	instanciated

2009-01-16 Nicolas Roard <nicolas@roard.com>
	Early work to directly use the AST from LanguageKit:
	* Load .st file, extracts the full AST via LK and populate ModelClass with it
	* Added accessors to LK classes (for the moments as categories)
	* Modifs in the Gorm file to have a textfield for the method's signature
	* Fixed a wrong commit in the Gorm file.
	* Fixed a bug in the properties tableview handling
	* Fixed compilation warning
