@@ -1,3 +1,8 @@
+2009-01-24 Nicolas Roard <nicolas@roard.com>
+	Use pretty print in the text editor while editing...
+	* build an AST from the text
+	* call the pretty-printer on the AST
+
 2009-01-19 Nicolas Roard <nicolas@roard.com>
 	Improve syntax highlighting
 	* add new 'token' methods in PrettyPrinterWriter
